<resources>
    <string name="app_name">Cadastro</string>

    <string name="txt_login">Login</string>
    <string name="txt_cadastrar">Cadastrar</string>

    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>

    <string name="hint_edt_nome">Nome</string>
    <string name="hint_edt_email">Email</string>
    <string name="hit_edt_senha">Senha</string>

    <string name="error_invalid_cadastro">Cadastro invalido</string>
    <string name="error_save_cadastro">Não foi possivel cadastrar</string>

</resources>